Actualizo archivos y archivo par BD

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard - TagSize</title>
     <link rel="stylesheet" href="../css/styles_dashboard.css">
+    <link rel="icon" type="image/png" href="../public/img/logo-removebg-preview.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <header>
@@ -18,6 +21,8 @@
             <div class="dashboard-options">
                 <a href="agregar_producto.html" class="btn">➕ Agregar Producto</a>
                 <a href="ver_productos.html" class="btn">📦 Ver Productos</a>
+                <a href="eliminar_productos.html" class="btn">❌ Eliminar Productos</a>
+                <a href="actualizar_productos.html" class="btn">🔄 Actualizar Productos</a>
             </div>
         </section>
     </main>
