--- a/html/home_page.html
+++ b/html/home_page.html
@@ -6,6 +6,7 @@
     <title>TagSize - Inicio</title>
     <link rel="icon" type="image/png" href="../public/img/logo-removebg-preview.png">
     <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
