--- a/html/login.html
+++ b/html/login.html
@@ -5,6 +5,8 @@
     <title>Login - TagSize</title>
     <link rel="icon" type="image/jpeg" href="../public/img/logo-removebg-preview.png">
     <link rel="stylesheet" href="../css/styles_login.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
     <header>
