--- a/html/welcome.html
+++ b/html/welcome.html
@@ -5,6 +5,7 @@
     <title>Acceso - TagSize</title>
     <link rel="icon" type="image/jpeg" href="../public/img/logo-removebg-preview.png">
     <link rel="stylesheet" href="../css/styles_welcome.css ">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 
